Email verification method & Fix admin page performance

--- a/eShopSolution/eShopSolution.AdminApp/Views/Login/Index.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/Login/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@using eShopSolution.ViewModels.System.Users
+﻿@using eShopSolution.ViewModels.AppSystem.Users
 @model LoginRequest
 @{
     Layout = null;
