--- a/eShopSolution/eShopSolution.AdminApp/Views/User/Delete.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model eShopSolution.ViewModels.System.Users.UserDeleteRequest
+﻿@model eShopSolution.ViewModels.AppSystem.Users.UserDeleteRequest
 
 @{
     ViewData["Title"] = "Xóa người dùng";
