--- a/eShopSolution/eShopSolution.AdminApp/Views/User/Create.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model eShopSolution.ViewModels.System.Users.RegisterRequest
+﻿@model eShopSolution.ViewModels.AppSystem.Users.RegisterRequest
 
 @{
     ViewData["Title"] = "Tạo mới người dùng";
