--- a/eShopSolution/eShopSolution.AdminApp/Views/User/Details.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model eShopSolution.ViewModels.System.Users.UserVm
+﻿@model eShopSolution.ViewModels.AppSystem.Users.UserVm
 
 @{
     ViewData["Title"] = "Chi tiết";
