--- a/eShopSolution/eShopSolution.AdminApp/Views/User/Edit.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model eShopSolution.ViewModels.System.Users.UserUpdateRequest
+﻿@model eShopSolution.ViewModels.AppSystem.Users.UserUpdateRequest
 
 @{
     ViewData["Title"] = "Cập nhật người dùng";
