--- a/eShopSolution/eShopSolution.AdminApp/Views/User/Index.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@using eShopSolution.ViewModels.Common;
-@model PagedResult<eShopSolution.ViewModels.System.Users.UserVm>
+@model PagedResult<eShopSolution.ViewModels.AppSystem.Users.UserVm>
 
 @{
     ViewData["Title"] = "Danh sách người dùng";
