--- a/eShopSolution/eShopSolution.AdminApp/Views/User/RoleAssign.cshtml
+++ b/eShopSolution/eShopSolution.AdminApp/Views/User/RoleAssign.cshtml
@@ -1,4 +1,4 @@
-﻿@model eShopSolution.ViewModels.System.Users.RoleAssignRequest
+﻿@model eShopSolution.ViewModels.AppSystem.Users.RoleAssignRequest
 
 @{
     ViewData["Title"] = "Gán quyền";
