--- a/FE/src/app/routes/header/header.component.html
+++ b/FE/src/app/routes/header/header.component.html
@@ -2,18 +2,24 @@
   <div class="header-top-menu bg-black color-secondary">
     <div class="container">
       <div class="row">
-        <div class="wrap flex-container padding-small">
-          <div class="contact-block d-flex align-items-center">
-            <span class="pr-50"><i class="icon icon-phone"></i>5555-00-444</span>
-            <span class="color-secondary"><i class="icon icon-envelope-o"></i><a
-              href="#"> healthydrink@gmail.com</a></span>
+        <div class="wrap flex-container padding-small align-items-center">
+          <div nz-col nzSpan="6">
+            <div class="contact-block d-flex align-items-center">
+              <span class="pr-50"><i class="icon icon-phone"></i>5555-00-444</span>
+              <span class="color-secondary"><i class="icon icon-envelope-o"></i><a
+                href="#"> healthydrink@gmail.com</a></span>
+            </div>
           </div>
-
+          <div nz-col nzSpan="9">
+            <nz-input-group [nzPrefix]="prefixTemplateSearch">
+              <input nz-input size="large" placeholder="Tìm kiếm" (blur)="search()" (keydown.enter)="search()" [(ngModel)]="textSearch">
+            </nz-input-group>
+          </div>
           <div class="header-top-right">
             <ul class="d-flex list-unstyled color-secondary">
               <div *ngIf="!checkAcc()">
                 <li class="d-flex align-items-center mr-5"><i class="fs-4 pr-2 bi bi-person-circle"></i><a
-                  routerLink="/account">My Account</a></li>
+                  routerLink="/account">Tài khoản</a></li>
               </div>
               <div *ngIf="checkAcc()">
                 <li class="d-flex align-items-center mr-5">
@@ -27,7 +33,8 @@
               </div>
               <div class="pt-3p">
                 <nz-badge [nzCount]="numberProductInCart">
-            <a class="head-example" (click)="openCart()"><span class="pr-1 fs-4" nz-icon nzType="shopping-cart" nzTheme="outline"></span>Cart</a>
+                  <a class="head-example" (click)="openCart()"><span class="pr-1 fs-4" nz-icon nzType="shopping-cart"
+                                                                     nzTheme="outline"></span>Giỏ hàng</a>
                 </nz-badge>
               </div>
             </ul>
@@ -55,26 +62,16 @@
             <div class="d-flex col-9">
               <div class="navbar-collapse collapse" id="slide-navbar-collapse">
                 <ul class="navbar-nav list-inline text-uppercase">
-                  <li class="nav-item text-hover active"><a routerLink="/" class="nav-link" data-effect="Home">Home</a>
+                  <li class="nav-item text-hover active"><a routerLink="/" class="nav-link" data-effect="Home">Trang
+                    chủ</a>
                   </li>
-                  <li class="nav-item text-hover"><a routerLink="/all-product" class="nav-link" data-effect="Shopping">Shopping</a></li>
-                  <li class="nav-item text-hover"><a routerLink="/blog" class="nav-link" data-effect="Blogs">Blog</a>
+                  <li class="nav-item text-hover"><a routerLink="/all-product" class="nav-link" data-effect="Shopping">Cửa
+                    hàng</a></li>
+                  <li class="nav-item text-hover"><a class="nav-link" data-effect="Blogs" (click)="openListOrder()">Đơn
+                    hàng</a>
                   </li>
-                  <li class="nav-item text-hover"><a routerLink="/about-us" class="nav-link" data-effect="Contact">Contact
-                    us</a></li>
-
-                  <!--              <li class="nav-item dropdown">-->
-                  <!--                <a href="#" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Pages</a>-->
-                  <!--                <ul class="dropdown-menu">-->
-                  <!--                  <li><a href="about.html" class="dropdown-item">About us</a></li>-->
-                  <!--                  <li><a href="blog.html" class="dropdown-item">Blog</a></li>-->
-                  <!--                  <li><a href="single-post.html" class="dropdown-item">Single Post</a></li>-->
-                  <!--                  <li><a href="contact.html" class="dropdown-item">Contact us</a></li>-->
-                  <!--                  <li><a href="shop.html" class="dropdown-item">Shop</a></li>-->
-                  <!--                  <li><a href="single-product.html" class="dropdown-item">Single Product</a></li>-->
-                  <!--                </ul>-->
-                  <!--              </li>-->
-
+                  <li class="nav-item text-hover"><a routerLink="/about-us" class="nav-link" data-effect="Contact">Liên
+                    hệ</a></li>
                 </ul>
               </div>
             </div>
@@ -87,3 +84,4 @@
   </header>
 </div>
 <app-cart #cart></app-cart>
+<ng-template #prefixTemplateSearch><span nz-icon nzType="search" nzTheme="outline"></span></ng-template>
