--- a/FE/src/app/routes/image-product/image-product.component.html
+++ b/FE/src/app/routes/image-product/image-product.component.html
@@ -1,6 +1,6 @@
 <section class="gallery-wrap margin-medium">
   <div class="container">
-    <h2 class="section-title mb-5 text-center">View Our Gallery</h2>
+    <h2 class="section-title mb-5 text-center">Hình ảnh sản phẩm</h2>
     <div class="row">
       <div class="d-flex flex-wrap col-md-12">
         <figure class="col-md-4 mb-3 pl-0">
@@ -53,7 +53,7 @@
         </figure>
       </div><!--content-->
       <div class="pix_btn text-center m-auto">
-        <a routerLink="/all-product" class="btn-hvr-effects mt-3">View All</a>
+        <a routerLink="/all-product" class="btn-hvr-effects mt-3">Xem tất cả</a>
       </div>
     </div>
   </div>
