--- a/FE/src/app/routes/special-product/special-product.component.html
+++ b/FE/src/app/routes/special-product/special-product.component.html
@@ -10,7 +10,7 @@
 
           <div class="pix_btn mt-4">
             <a class="btn btn-outline-light">
-              <span>Shop Now</span>
+              <span>Mua ngay</span>
             </a>
           </div>
         </div><!--item-content-->
