--- a/FE/src/app/routes/best-product/best-product.component.html
+++ b/FE/src/app/routes/best-product/best-product.component.html
@@ -1,6 +1,6 @@
 <section class="best-products margin-large">
   <div class="container">
-    <h2 class="section-title text-center mb-4">Best Product</h2>
+    <h2 class="section-title text-center mb-4">Sản phẩm bán chạy</h2>
     <div class="row">
       <div class="d-flex products-slider">
 
