--- a/FE/src/app/routes/testimonials/testimonials.component.html
+++ b/FE/src/app/routes/testimonials/testimonials.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="reviews-content col-md-12 light text-center">
-        <h2 class="section-title">Testimonials</h2>
+        <h2 class="section-title">Trải nghiệm thực tế</h2>
 
         <div class="testimonial-slider">
           <div class="testimonials-inner">
